# mipt-cpp-tasks

./: .gitignore  CMakeLists.txt  README.md  bitwise_calculator.cpp
bitwise_calculator/: CMakeLists.txt  bitwise_calculator.cpp
degrees-radians/: CMakeLists.txt  degrees.cpp  degrees.h  main.cpp  radians.cpp  radians.h  tests.cpp
